fix spacing on HW volunteerinfo page and do some formatting

--- a/styles/volunteerinfo.scss
+++ b/styles/volunteerinfo.scss
@@ -12,7 +12,9 @@ h1{
     line-height: 30px;
 }
 
-
+#no-below{
+    margin-bottom: 0;
+}
 
 .details-item{
     flex: 1 1 275px;
